--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
   <title>QR code component</title>
 </head>
 <body>
+  <div class="card-wrapper">
+    <section class="card">
+      <header class="card__qr-code">
+        <img src="/images/image-qr-code.png" alt="scan this qr code">  
+      </header>
+      <div class="card__body">
+        <h1 class="card__heading">
+          Improve your front-end skills by building projects 
+        </h1>
+        <p class="card__paragraph">
+          Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+        </p>
+      </div>
+    </section>
+  </div>
   
   <script type="module" src="/main.js"></script>
 </body>
