--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
   <link rel="icon" type="image/x-icon" href="/images/favicon-32x32.png">
   <title>QR code component</title>
 </head>
-
 <body>
-  <section class="card-wrapper">
+  <main class="card-wrapper">
     <section class="card">
       <header class="card__qr-code">
         <img src="/images/image-qr-code.png" alt="scan this qr code">
@@ -23,9 +22,7 @@
         </p>
       </div>
     </section>
-  </section>
-
+  </main>
   <script type="module" src="/main.js"></script>
 </body>
-
 </html>
